--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Marina K.</h1>
-								<h3>Data Scientist · Applied Researcher · Image Processing Engineer</h3>
-								<p>Currently in Urban Mobility and Sustainability field · Hopping to extend also to AI for Healthcare</p>
+								<h3><b>Data Scientist · Applied Researcher · Image Processing Engineer</b></h3>
+								<p>Currently in Urban Mobility and Sustainability field · Looking forward to dive into Healthcare field</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#about">About</a></li>
-								<li><a href="#portfolio">Projects</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#about"><b>About</b></a></li>
+								<li><a href="#portfolio"><b>Projects</b></a></li>
+								<li><a href="#contact"><b>Contact</b></a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -51,11 +51,20 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<div align="justify"> 
-								<p><blockquote>I believe the future brings decision making based on data science.</blockquote> That's why my focus is set on data science applications in 2 areas of interest:</p>
-								<h3>Sustainable Cities</h3>
-								<p>Urban Mobility. Check out my <a href="#projects">projects</a>.</p>
-								<h3>Healthcare Diagnostics</h3>
-								<p>Medical Image Processing. Check out my <a href="#projects">projects</a>.</p>
+								<p><blockquote>Creating a liveable future with data-driven urban research!</blockquote></p>
+								<p>Hi, I'm Marina!👋
+									<br><br>I tend to think that a great part of our future will be influenced by data, so I might as well be one of those processing it. 🤷🏻‍♀️
+									<br><br>What I enjoy the most is deep-diving into various datasets of different sizes, all in order to find insights and help businesses or institutions in their decision-making processes. I'm skilled in all steps of data science process: from data collection and pre-processing, application of statistical methods (including machine learning algorithms), data visualization and results communication. My <b>background in Information Processing</b> helped me build a strong foundation, with a particular focus on Image Processing. 
+									<br><br>Now, after <b>4 years in Urban Data Science field</b> and work experience in 2 Italian Research Foundations, I can say that I am ready to <i>"go back to my roots"</i> and also explore the <b>imaging field</b>, applied to both <b>healthcare and earth observation/ remote sensing</b>.
+									<br><br>Currently, I'm expanding my knowledge and learning about cloud services (AWS and Azure) and model deployment and monitoring (Docker and Kubernetes), all in order to be an all-encompassing Data Scientist.
+									<br><h4>Fun facts:</h4>
+									<ul>
+										<li>I can make a conversation in 5 languages (🇭🇷, 🇬🇧, 🇮🇹, 🇪🇸 and 🇩🇪).</li>
+										<li>As a member of a student organization, I was the main organizer of an international student conference in the capital of my country and I managed to convince the President of the Republic to support it with a high-patronage!</li>
+									</ul>
+									You liked what you just read? Great, now check out some of <a href="#portfolio"> my projects!</a>
+									<br>You have a proposal for me or a project to work on? That's cool, let's <a href="#contact">get in touch!</a>
+								</p>
 								</div>
 							</article>
 						
@@ -63,7 +72,7 @@
 							<article id="portfolio">
 								<h2 class="major">Projects</h2>
 								<div align="justify"> 
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>Here's a glimpse of the projects I've been working on, either at work or just for fun:</p>
 								</div>
 
 								<!-- Project Gallery -->
@@ -143,8 +152,8 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<div align="justify">
-								<p>I'd be happy to collaborate on data science/ AI projects in healthcare and sustainability sectors, but even if you just want to ask me about data science applied to mobility and urban planning, please go ahead and
-								<b>get in touch either via my email or LinkedIN!</b></p></div>
+								<p>I would be happy to collaborate on data science/ AI projects in healthcare and sustainability sectors, but even if you just want to ask me about data science applied to mobility and urban planning, please go ahead and
+								<b>get in touch either via my email or LinkedIN. ☺️</b></p></div>
 								<ul class="icons">
 									<li><a href="mailto:mrnkln@outlook.com" class="icon regular fa-envelope"><span class="label">email</span></a></li>
 									<li><a href="https://www.linkedin.com/in/klnmrn/" class="icon brands fa-linkedin"><span class="label">LinkedIN</span></a></li>
@@ -387,7 +396,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</div>
 				</div>
 			</div>
-			
 			
 		<!-- BG -->
 			<div id="bg"></div>
