--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 		<link rel="stylesheet" href="assets/css/project-gallery.css">
 		<link rel="stylesheet" href="assets/css/modal.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script src="assets/js/project.js"></script>
 	</head>
 	<body class="is-preload">
 
@@ -69,7 +68,7 @@
 							</article>
 						
 						<!-- Projects -->
-							<article id="portfolio">
+							<article id="projects">
 								<h2 class="major">Projects</h2>
 								<div align="justify"> 
 								<p>Here's a glimpse of the projects I've been working on, either at work or just for fun:</p>
@@ -406,6 +405,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/project.js"></script>
+			<script src="assets/js/portfolio.js"></script>
 
 	</body>
 
