--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<nav>
 							<ul>
 								<li><a href="#about"><b>About</b></a></li>
-								<li><a href="#portfolio"><b>Projects</b></a></li>
+								<li><a href="#projects"><b>Projects</b></a></li>
 								<li><a href="#contact"><b>Contact</b></a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -61,7 +61,7 @@
 										<li>I can make a conversation in 5 languages (🇭🇷, 🇬🇧, 🇮🇹, 🇪🇸 and 🇩🇪).</li>
 										<li>As a member of a student organization, I was the main organizer of an international student conference in the capital of my country and I managed to convince the President of the Republic to support it with a high-patronage!</li>
 									</ul>
-									You liked what you just read? Great, now check out some of <a href="#portfolio"> my projects!</a>
+									You liked what you just read? Great, now check out some of <a href="#projects"> my projects!</a>
 									<br>You have a proposal for me or a project to work on? That's cool, let's <a href="#contact">get in touch!</a>
 								</p>
 								</div>
