Revert "Update index.html"
This reverts commit b2c22e0c50d0f265652e1394069b66ef23d07b04.

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Marina K.</h1>
-								<h3><b>Data Scientist · Applied Researcher · Image Processing Engineer</b></h3>
-								<p>Currently in Urban Mobility and Sustainability field · Looking forward to dive into Healthcare field</p>
+								<h3>Data Scientist · Applied Researcher · Image Processing Engineer</h3>
+								<p>Currently in Urban Mobility and Sustainability field · Hopping to extend also to AI for Healthcare</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#about"><b>About</b></a></li>
-								<li><a href="#projects"><b>Projects</b></a></li>
+								<li><a href="#portfolio"><b>Projects</b></a></li>
 								<li><a href="#contact"><b>Contact</b></a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -61,7 +61,7 @@
 										<li>I can make a conversation in 5 languages (🇭🇷, 🇬🇧, 🇮🇹, 🇪🇸 and 🇩🇪).</li>
 										<li>As a member of a student organization, I was the main organizer of an international student conference in the capital of my country and I managed to convince the President of the Republic to support it with a high-patronage!</li>
 									</ul>
-									You liked what you just read? Great, now check out some of <a href="#projects"> my projects!</a>
+									You liked what you just read? Great, now check out some of <a href="#portfolio"> my projects!</a>
 									<br>You have a proposal for me or a project to work on? That's cool, let's <a href="#contact">get in touch!</a>
 								</p>
 								</div>
@@ -71,7 +71,7 @@
 							<article id="projects">
 								<h2 class="major">Projects</h2>
 								<div align="justify"> 
-								<p>Here's a glimpse of the projects I've been working on, either at work or just for fun:</p>
+								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 								</div>
 
 								<!-- Project Gallery -->
@@ -182,8 +182,8 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<div align="justify">
-								<p>I would be happy to collaborate on data science/ AI projects in healthcare and sustainability sectors, but even if you just want to ask me about data science applied to mobility and urban planning, please go ahead and
-								<b>get in touch either via my email or LinkedIN. ☺️</b></p></div>
+								<p>I'd be happy to collaborate on data science/ AI projects in healthcare and sustainability sectors, but even if you just want to ask me about data science applied to mobility and urban planning, please go ahead and
+								<b>get in touch either via my email or LinkedIN!</b></p></div>
 								<ul class="icons">
 									<li><a href="mailto:mrnkln@outlook.com" class="icon regular fa-envelope"><span class="label">email</span></a></li>
 									<li><a href="https://www.linkedin.com/in/klnmrn/" class="icon brands fa-linkedin"><span class="label">LinkedIN</span></a></li>
@@ -482,6 +482,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</div>
 				</div>
 			</div>-->
+			
 			
 		<!-- BG -->
 			<div id="bg"></div>
