--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<nav>
 							<ul>
 								<li><a href="#about"><b>About</b></a></li>
-								<li><a href="#portfolio"><b>Projects</b></a></li>
+								<li><a href="#project"><b>Projects</b></a></li>
 								<li><a href="#contact"><b>Contact</b></a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -210,15 +210,7 @@
 								<h4>Blockquote</h4>
 								<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
 								<h4>Preformatted</h4>
-								<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-print 'Iteration ' + i;
-deck.shuffle();
-i++;
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
+								<pre><code>i = 0; while (!deck.isInOrder()) { print 'Iteration ' + i; deck.shuffle(); i++;} print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</section>
 
 							<section>
@@ -431,6 +423,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</form>
 							</section>
 
+						</article>
+
+					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
