--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<div align="justify">
-								<p>I'd be happy to collaborate on data science/ AI projects in healthcare and sustainability sectors, but even if you just want to ask me about data science applied to mobility and urban planning, please go ahead and
-								<b>get in touch either via my email or LinkedIN!</b></p></div>
+								<p>I would be happy to collaborate on data science/ AI projects in healthcare and sustainability sectors, but even if you just want to ask me about data science applied to mobility and urban planning, please go ahead and
+									<b>get in touch either via my email or LinkedIN. ☺️</b></p></div>
 								<ul class="icons">
 									<li><a href="mailto:mrnkln@outlook.com" class="icon regular fa-envelope"><span class="label">email</span></a></li>
 									<li><a href="https://www.linkedin.com/in/klnmrn/" class="icon brands fa-linkedin"><span class="label">LinkedIN</span></a></li>
