--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="assets/js/project.js"></script>
+			<script src="assets/js/projects.js"></script>
 			<!--<script src="assets/js/portfolio.js"></script>-->
 
 	</body>
