--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<article id="projects">
 								<h2 class="major">Projects</h2>
 								<div align="justify"> 
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>Here's a glimpse of the projects I've been working on, either at work or just for fun:</p>
 								</div>
 
 								<!-- Project Gallery -->
@@ -79,32 +79,26 @@
 
 									<div class="project" data-project="project1" onclick="loadProjectDetails('project1')">
 											<img src="project1-thumbnail.jpg" alt="Project 1">
-											<h3>Project 1</h3>
 									</div>
 
 									<div class="project" data-project="project2" onclick="loadProjectDetails('project2')">
 										<img src="project2-thumbnail.jpg" alt="Project 2">
-										<h3>Project 2</h3>
 									</div>
 
 									<div class="project" data-project="project3" onclick="loadProjectDetails('project3')">
 										<img src="project3-thumbnail.jpg" alt="Project 3">
-										<h3>Project 3</h3>
 									</div>
 
 									<div class="project" data-project="project4" onclick="loadProjectDetails('project4')">
 										<img src="project4-thumbnail.jpg" alt="Project 4">
-										<h3>Project 4</h3>
 									</div>
 
 									<div class="project" data-project="project5" onclick="loadProjectDetails('project5')">
 										<img src="project5-thumbnail.jpg" alt="Project 5">
-										<h3>Project 5</h3>
 									</div>
 
 									<div class="project" data-project="project6" onclick="loadProjectDetails('project6')">
 										<img src="project6-thumbnail.jpg" alt="Project 6">
-										<h3>Project 6</h3>
 									</div>
 
 
