--- a/index.html
+++ b/index.html
@@ -78,27 +78,33 @@
 								<div class="project-gallery row">
 
 									<div class="project" id="project1" data-project="project1" onclick="loadProjectDetails('project1')">
-											<img src="project1-thumbnail.jpg" alt="Project 1">
+										<img src="project1-thumbnail.jpg" alt="Project 1">
+										<h3>Project 1 Title</h3>
 									</div>
 
 									<div class="project" id="project2" data-project="project2" onclick="loadProjectDetails('project2')">
 										<img src="project2-thumbnail.jpg" alt="Project 2">
+										<h3>Project 2 Title</h3>
 									</div>
 
 									<div class="project" id="project3" data-project="project3" onclick="loadProjectDetails('project3')">
 										<img src="project3-thumbnail.jpg" alt="Project 3">
+										<h3>Project 3 Title</h3>
 									</div>
 
 									<div class="project" id="project4" data-project="project4" onclick="loadProjectDetails('project4')">
 										<img src="project4-thumbnail.jpg" alt="Project 4">
+										<h3>Project 4 Title</h3>
 									</div>
 
 									<div class="project" id="project5" data-project="project5" onclick="loadProjectDetails('project5')">
 										<img src="project5-thumbnail.jpg" alt="Project 5">
+										<h3>Project 5 Title</h3>
 									</div>
 
 									<div class="project" id="project6" data-project="project6" onclick="loadProjectDetails('project6')">
 										<img src="project6-thumbnail.jpg" alt="Project 6">
+										<h3>Project 6 Title</h3>
 									</div>
 
 
