--- a/index.html
+++ b/index.html
@@ -77,27 +77,27 @@
 								<!-- Project Gallery -->
 								<div id="projects" class="section">
 
-									<div class="project" id="project1" data-project="project1" onclick="loadProjectDetails('project1')">
+									<div class="project" id="project1" data-project="project1" >
 										<img src="project1-thumbnail.jpg" alt="Project 1">
 									</div>
 
-									<div class="project" id="project2" data-project="project2" onclick="loadProjectDetails('project2')">
+									<div class="project" id="project2" data-project="project2" >
 										<img src="project2-thumbnail.jpg" alt="Project 2">
 									</div>
 
-									<div class="project" id="project3" data-project="project3" onclick="loadProjectDetails('project3')">
+									<div class="project" id="project3" data-project="project3" >
 										<img src="project3-thumbnail.jpg" alt="Project 3">
 									</div>
 
-									<div class="project" id="project4" data-project="project4" onclick="loadProjectDetails('project4')">
+									<div class="project" id="project4" data-project="project4" >
 										<img src="project4-thumbnail.jpg" alt="Project 4">
 									</div>
 
-									<div class="project" id="project5" data-project="project5" onclick="loadProjectDetails('project5')">
+									<div class="project" id="project5" data-project="project5" >
 										<img src="project5-thumbnail.jpg" alt="Project 5">
 									</div>
 
-									<div class="project" id="project6" data-project="project6" onclick="loadProjectDetails('project6')">
+									<div class="project" id="project6" data-project="project6" >
 										<img src="project6-thumbnail.jpg" alt="Project 6">
 									</div>
 
