--- a/index.html
+++ b/index.html
@@ -448,8 +448,8 @@
 			</div>
 		-->
 
-			<div id="modal-background" class="modal-background"></div>
-
+			
+		<!-- The Modal -->
 			<div id="modal" class="modal" onclick="closeModal()">
 				<div id="modalContent" onclick="event.stopPropagation()">
 					<span class="close" onclick="closeModal()">&times;</span>
@@ -458,6 +458,7 @@
 					<p id="projectDescription"></p>
 				</div>
 			</div>
+		
 			
 
 		<!--<div id="project1" class="modal">
