--- a/index.html
+++ b/index.html
@@ -450,9 +450,9 @@
 
 			
 		<!-- The Modal -->
-			<div id="modal" class="modal" onclick="closeModal()">
-				<div id="modalContent" onclick="event.stopPropagation()">
-					<span class="close" onclick="closeModal()">&times;</span>
+			<div id="modal" class="modal">
+				<span class="close" onclick="closeModal()">&times;</span>
+				<div id="modalContent">
 					<h2 id="projectTitle"></h2>
 					<img id="projectImage" src="" alt="">
 					<p id="projectDescription"></p>
