--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 			
 		<!-- The Modal -->
 			<div id="modal" class="modal">
-				<span class="close" onclick="closeX()">&times;</span>
+				<span class="close" onclick="closeModal()">&times;</span>
 				<div id="modalContent">
 					<h2 id="projectTitle"></h2>
 					<img id="projectImage" src="" alt="">
