--- a/index.html
+++ b/index.html
@@ -450,6 +450,7 @@
 					<h2 id="projectTitle"></h2>
 					<img id="projectImage" src="" alt="">
 					<p id="projectDescription"></p>
+					<button onclick="closeModal()">Close</button>
 				</div>
 			</div>
 		
