--- a/index.html
+++ b/index.html
@@ -444,14 +444,14 @@
 
 			
 		<!-- The Modal -->
-			<div id="modal" class="modal">
+			<article id="modal" class="modal">
 				<span class="close" onclick="closeModal()">&#88;</span>
 				<div id="modalContent">
 					<h2 id="projectTitle"></h2>
 					<img id="projectImage" src="" alt="">
 					<p id="projectDescription"></p>
 				</div>
-			</div>
+			</article>
 		
 			
 
