--- a/index.html
+++ b/index.html
@@ -444,14 +444,15 @@
 
 			
 		<!-- The Modal -->
-			<article id="modal" class="modal">
-				<span class="close" onclick="closeModal()">&#88;</span>
+			<div id="modal" class="modal">
+				<!--<span class="close" onclick="closeModal()">&#88;</span> -->
 				<div id="modalContent">
+					<span id="closeModal" class="close">&times;</span>
 					<h2 id="projectTitle"></h2>
 					<img id="projectImage" src="" alt="">
 					<p id="projectDescription"></p>
 				</div>
-			</article>
+			</div>
 		
 			
 
