--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
 									<ul class="icons">
 									<li><a href="mailto:mrnkln@outlook.com" class="icon regular fa-envelope"><span class="label">email</span></a></li>
 									<li><a href="https://www.linkedin.com/in/klnmrn/" class="icon brands fa-linkedin"><span class="label">LinkedIN</span></a></li>
+									<li><a href="https://github.com/klnmrn" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
