--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<p><blockquote>Creating a liveable future with data-driven urban research!</blockquote></p>
 								<p>Hi, I'm Marina!👋
 									<br><br>I tend to think that a great part of our future will be influenced by data, so I might as well be one of those processing it. 🤷🏻‍♀️
-									<br><br>What I enjoy the most is deep-diving into various datasets of different sizes, all in order to find insights that will advance the field and/or help businesses and institutions in their decision-making processes. I'm skilled in all steps of data science process: from data collection and pre-processing, application of statistical methods (including machine learning algorithms), data visualization and results communication. My <b>background in Information Processing</b> helped me build a strong foundation, with a particular focus on Image Processing. 
+									<br><br>What I enjoy the most is deep-diving into various datasets of different sizes, all in order to find insights that will advance the field and/or help businesses and institutions in their decision-making processes. I'm skilled in all steps of data science process: from data collection and pre-processing, application of statistical methods (including machine learning algorithms) to data visualization and results communication. My <b>background in Information Processing</b> helped me build a strong foundation, with a particular focus on Image Processing. 
 									<br><br>Now, after <b>4 years in Urban Data Science field</b> and work experience in 2 Italian Research Foundations, I can say that I am ready to <i>"go back to my roots"</i> and also explore the <b>imaging field</b>, applied to both <b>healthcare and earth observation/ remote sensing</b>.
 									<br><br>Currently, I'm expanding my knowledge and learning about cloud services (AWS and Azure) and model deployment and monitoring (Docker and Kubernetes), with an aim to become an all-encompassing Data Scientist.
 									<br><br>
@@ -301,8 +301,7 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<div align="justify">
-								<p>I would be happy to collaborate on data science/ AI projects in sustainability and/or healthcare sectors, but even if you just want to ask me about data science applied to mobility and urban planning, please go ahead and
-									<b>get in touch either via my email or LinkedIN. ☺️</b></p></div>
+								<p>I would be happy to collaborate on data science/ AI projects in sustainability and/or healthcare sectors, but even if you just want to ask me about data science applied to mobility and urban planning, please go ahead and <b>get in touch either via my email or LinkedIN. ☺️</b></p></div>
 								<br>
 									<ul class="icons">
 									<li><a href="mailto:mrnkln@outlook.com" class="icon regular fa-envelope"><span class="label">email</span></a></li>
