--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 									</li>
 
 								</ul>
+								You have a proposal for me or a project to work on? That's cool, let's <a href="#contact">get in touch!</a>
 
 							</article>
 								  
