--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<div class="inner">
 								<h1>Marina K.</h1>
 								<h3>Data Scientist · Applied Researcher · Image Processing Engineer</h3>
-								<p>Currently in Urban Mobility and Sustainability field · Looking forward to dive into Healthcare field</p>
+								<p>Currently in Urban Mobility and Sustainability field · Curious about exploring the Healthcare field</p>
 							</div>
 						</div>
 						<nav>
