--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<div class="inner">
 								<h1>Marina K.</h1>
 								<h3>Data Scientist · Applied Researcher · Image Processing Engineer</h3>
-								<p>Currently in Urban Mobility and Sustainability field · Curious about exploring the Healthcare field</p>
+								<p>Experienced in Urban Mobility and Sustainability field · Curious about exploring the Healthcare field</p>
 							</div>
 						</div>
 						<nav>
@@ -47,17 +47,18 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<div align="justify"> 
-								<p><blockquote>Creating a liveable future with data-driven urban research!</blockquote></p>
+								<p><blockquote>Making sense of complex data with visual stories that drive action!</blockquote></p>
 								<p>Hi, I'm Marina!👋
 									<br><br>I always liked numbers, order and organization. Most of all, I like creating, and I see data as a piece of scattered LEGO's that have to be put in order to make a story with an impact. 🧱
-									<br><br>That's exactly what I do daily: I dive into big datasets of various types, in order to find insights that will advance the field and help businesses and institutions in their decision-making processes. I'm skilled in all steps of data science process: from data collection and processing, application of statistical methods (including machine learning algorithms) to data visualization and results communication to various stakeholders. My <b>background in Information Processing</b> helped me build a strong technical foundation, with a particular focus on Image Processing. On the other hand, my student years and memberships in some student organizations thought me soft skills like public speaking, communication, negotiation, teamwork and leadership.
+									<br><br>That's exactly what I do daily: I dive into big datasets of various types, in order to find insights that will help businesses and institutions in their decision-making processes. I'm skilled in all steps of data science process: from data collection and processing, application of statistical methods (including machine learning algorithms) to data visualization and results communication to various stakeholders. My <b>background in Information Processing</b> helped me build a strong technical foundation, with a particular focus on Image Processing. On the other hand, my student years and memberships in some student organizations thought me soft skills like public speaking, communication, negotiation, funding, teamwork and leadership.
 									<br><br>Now, after <b>4 years in Urban Data Science field</b> and valuable experience at 2 Italian Research Foundations, I've found contentment in my current path. Yet so, I've been captivated by the idea of exploring the <b>imaging field</b>, applied to both <b>healthcare and earth observation/ remote sensing</b>. While I still have a strong interest in continuing my current work, the allure of venturing into imaging field presents an enticing opportunity for my professional growth.
-									<br><br>Currently, I'm expanding my knowledge and learning about cloud services (AWS and Azure) and model deployment and monitoring (Docker and Kubernetes), with an aim to become an all-encompassing Data Scientist.
+									<br><br>Now, after <b>4 years in Urban Data Science field</b> and valuable experience at 2 Italian Research Foundations, I am ready to embark on a new journey. Altough, I am still very much interested in continuing my work in previously mentioned fields, I've been captivated by the idea of exploring different paths, wheather it being financial field, or <b>imaging field</b>, applied to both <b>healthcare and earth observation/ remote sensing</b>, the allure of venturing into the unknown presents an enticing opportunity for my professional growth.
+									<br><br>Currently, I'm expanding my knowledge and learning about cloud services (AWS, Azure, GCP) and model deployment and monitoring (Docker and Kubernetes), with an aim to become an all-encompassing Data Scientist.
 									<br><br>
 									<h4>Fun facts:</h4>
 									<ul>
 										<li>I can make a conversation in 5 languages (🇭🇷, 🇬🇧, 🇮🇹, 🇪🇸 and 🇩🇪).</li>
-										<li>While studying for my MSc, I was the main organizer of an international student conference in the capital of my country and I managed to convince the President of the Republic to support it with a high-patronage!</li>
+										<li>While studying for my MSc, I was the main organizer of an international student conference in the capital of my country and I managed to convince the President of the Republic to endorse it with a high-patronage!</li>
 									</ul>
 									<br>
 									You liked what you just read? Great, now check out some of <a href="#projects"> my projects!</a>
