--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									<h4>Fun facts:</h4>
 									<ul>
 										<li>I can make a conversation in 5 languages (🇭🇷, 🇬🇧, 🇮🇹, 🇪🇸 and 🇩🇪).</li>
-										<li>While studying for my MSc, I was the main organizer of an international student conference in the capital of my country and I managed to convince the President of the Republic to endorse it with a high-patronage!</li>
+										<li>While studying for my MSc, I was the main organizer of an international student conference in the capital of my country and I managed to convince the President of the Republic to endorse it with high-patronage!</li>
 									</ul>
 									<br>
 									You liked what you just read? Great, now check out some of <a href="#projects"> my projects!</a>
@@ -302,7 +302,7 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<div align="justify">
-								<p>I would be happy to collaborate on data science/ AI projects in sustainability and/or healthcare sectors, but even if you just want to ask me about data science applied to mobility and urban planning, please go ahead and <b>get in touch either via my email or LinkedIN. ☺️</b></p></div>
+								<p>I would be happy to collaborate on data science/ AI projects in sustainability or healthcare, but even if you just want to ask me about my previous data science projects, please go ahead and <b>get in touch either via my email or LinkedIN. ☺️</b></p></div>
 								<br>
 									<ul class="icons">
 									<li><a href="mailto:mrnkln@outlook.com" class="icon regular fa-envelope"><span class="label">email</span></a></li>
