--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<div class="inner">
 								<h1>Marina K.</h1>
 								<h3>Data Scientist · Applied Researcher · Image Processing Engineer</h3>
-								<p>Experienced in Urban Mobility, Energy and Sustainability · Eager to expand into Finance, Earth Observation or Healthcare.</p>
+								<p>Experienced in Urban Mobility, Energy and Sustainability · Eager to expand into Finance, Earth Observation or Healthcare</p>
 							</div>
 						</div>
 						<nav>
