--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<div align="justify">
-								<p>I would be happy to collaborate on data science/ AI projects in sustainability or healthcare, but even if you just want to ask me about my previous data science projects, please go ahead and <b>get in touch either via my email or LinkedIN. ☺️</b></p></div>
+								<p>I would be happy to collaborate on data science/ AI projects in sustainability or healthcare, but even if you just want to ask me about my previous projects, please go ahead and <b>get in touch either via my email or LinkedIN. ☺️</b></p></div>
 								<br>
 									<ul class="icons">
 									<li><a href="mailto:mrnkln@outlook.com" class="icon regular fa-envelope"><span class="label">email</span></a></li>
