--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 									</div>
 								</article>
 
-								<article id="urbandatanalytics" class="project-details">
+								<article id="urbandataanalytics" class="project-details">
 									<div align="justify">
 										<h3 id="projectTitle">Urban Data Analytics</h3>
 										<div>
