--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 												The data taken into consideration included:
 												<ul><li>Google Street View Imagery in order to assess the conditions and accessibility of parks and playground areas</li>
 													<li>Barcelona open data on socio-economic indicators, schools, open playgrounds and parks</li>
-													<li>Open Street Map data on fast food restaurants and similar facilities</li></ul>
+													<li>Open Street Map data on fast food restaurants and similar facilities</li>
 												<br>
 												The ongoing analysis in QGIS software showed how certain areas of Nou Barris neighbourhood are deprived of open playgrounds and parks, while flourishing with fast food facilities. Once finished, this page will be updated.
 												<br><br>
@@ -205,7 +205,7 @@
 													<picture>
 														<img src="images\urban_data.png" alt="urban_data" width=100%>
 													</picture>
-													<figcaption><font size="1.8">Fig. 1. Map of Nou Barris neighbourhood of Barcelona</font></figcaption>
+													<figcaption><font size="1.8">Fig. 1. Map of Nou Barris neighbourhood of Barcelona and its' schools, playgrounds/parks and fast food facilities</font></figcaption>
 												</figure></center>
 												<br>
 												<b>Read more</b><br>
