--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
 												<ul><li>highest rates of childhood obesity in the city (official ASPB data),</li>
 													<li>lowest income per capita,</li>
 													<li>known deficit in quality public space and sports infrastructure, particularly near schools,</li>
-													<li>politically under-prioritized situation in terms of urban renewal compared to central districts.</li>
-												<br><br>
+													<li>politically under-prioritized situation in terms of urban renewal compared to central districts.</li></ul>
+												<br>
 												The data taken into consideration included:
 												<ul><li>Google Street View Imagery in order to assess the conditions and accessibility of parks and playground areas</li>
 													<li>Barcelona open data on socio-economic indicators, schools, open playgrounds and parks</li>
-													<li>Open Street Map data on fast food restaurants and similar facilities</li>
+													<li>Open Street Map data on fast food restaurants and similar facilities</li></ul>
 												<br>
 												The ongoing analysis in QGIS software showed how certain areas of Nou Barris neighbourhood are deprived of open playgrounds and parks, while flourishing with fast food facilities. Once finished, this page will be updated.
 												<br><br>
